general bug fixes, added ability to create new users

--- a/BugTracker/src/main/resources/static/fragments/navbar.html
+++ b/BugTracker/src/main/resources/static/fragments/navbar.html
@@ -31,8 +31,8 @@
 	<li class="nav-item dropdown" sec:authorize="hasAuthority('ADMINISTRATOR')">
 		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Admin</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			<a class="dropdown-item" href= "/management/create-user">Create User</a>
-            <a class="dropdown-item" href= "/management/manage-users">Manage Users</a>
+			<a class="dropdown-item" href= "/users/create-new-user">Create User</a>
+            <a class="dropdown-item" href= "/users/manage-users">Manage Users</a>
             <a class="dropdown-item" href= "/tickets/manage-tickets">Manage Tickets</a>
             <a class="dropdown-item" href= "/projects/manage-projects">Manage Projects</a>
         </div>
