--- a/BugTracker/src/main/resources/templates/ticket/ticket-details.html
+++ b/BugTracker/src/main/resources/templates/ticket/ticket-details.html
@@ -10,7 +10,7 @@
 <div th:replace="../static/fragments/navbar :: mynavbar"></div>
 
 	<br><br>
-	<div align="center" style="max-width: ">
+	<div align="center">
 	<h3 >Ticket Details</h3><br>
 <dl class="row" style="max-width: 900px">
   <dt class="col-sm-3">Title</dt>
