--- a/BugTracker/src/main/resources/templates/user/user-details.html
+++ b/BugTracker/src/main/resources/templates/user/user-details.html
@@ -10,7 +10,7 @@
 <div th:replace="../static/fragments/navbar :: mynavbar"></div>
 
 <br><br>
-<div align="center" style="max-width: ">
+<div align="center">
 	<h3 th:text="${user.firstName} + '\'s Details'"></h3>
 	<br>
 	
