--- a/BugTracker/src/main/resources/static/fragments/navbar.html
+++ b/BugTracker/src/main/resources/static/fragments/navbar.html
@@ -10,7 +10,7 @@
 		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 			<a class="dropdown-item" sec:authorize="isAnonymous()" th:href="@{/login}">Log in</a>
-			<a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/user/settings}">Settings</a>
+			<a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/users/settings}">Settings</a>
             <a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/logout}">Log out</a>
         </div>
 	</li>
