--- a/BugTracker/src/main/resources/templates/ticket/ticket-details.html
+++ b/BugTracker/src/main/resources/templates/ticket/ticket-details.html
@@ -22,7 +22,7 @@
   <dt class="col-sm-3" th:if="${ticketDetails.assignedUser == null}">No one assigned</dt>
   <dd class="col-sm-9" th:if="${ticketDetails.assignedUser != null && ticketDetails.assignedUser.userId != #authentication.principal.userId}" th:text="${ticketDetails.assignedUser?.firstName + ' ' + ticketDetails.assignedUser?.lastName}"></dd>
   <dd class="col-sm-9" th:if="${ticketDetails.assignedUser != null && ticketDetails.assignedUser.userId == #authentication.principal.userId}"><a th:href="@{/tickets/drop-ticket/{id}(id=${ticketDetails.ticketId})}" class="btn btn-danger">Drop Ticket</a></dd>
-  <dd class="col-sm-9" th:if="${ticketDetails.assignedUser == null}"><a th:href="@{/tickets/take-ticket/{id}(id=${ticketDetails.ticketId})}" class="btn btn-success">Take ticket</a></dd>
+  <dd class="col-sm-9" sec:authorize="hasAnyAuthority('DEVELOPER, PROJECTMANAGER, ADMINISTRATOR')" th:if="${ticketDetails.assignedUser == null}"><a th:href="@{/tickets/take-ticket/{id}(id=${ticketDetails.ticketId})}" class="btn btn-success">Take ticket</a></dd>
   <dt class="col-sm-3">Submitter</dt>
   <dd class="col-sm-9" th:text="${ticketDetails.submitter?.firstName + ' ' + ticketDetails.submitter?.lastName}"></dd>
   <dt class="col-sm-3">Submission Date</dt>
