allowed user account enable/disable, and assigning projects/roles

--- a/BugTracker/src/main/resources/templates/project/view-projects.html
+++ b/BugTracker/src/main/resources/templates/project/view-projects.html
@@ -27,7 +27,7 @@
 	    <tr>
 	      <th scope="col">Project Name</th>
 	      <th scope="col">Description</th>
-	      <th scope="col" colspan="2" align="center">Actions</th>
+	      <th scope="col" colspan="2" style="text-align: center;">Actions</th>
 	    </tr>
 	  </thead>
 	  <tbody th:if="${projects != null}">
