--- a/BugTracker/src/main/resources/templates/ticket/view-tickets.html
+++ b/BugTracker/src/main/resources/templates/ticket/view-tickets.html
@@ -30,7 +30,7 @@
 	      <th scope="col">Description</th>
 	      <th scope="col">Type</th>
 	      <th scope="col">Status</th>
-	      <th scope="col" colspan="2" align="center">Actions</th>
+	      <th scope="col" colspan="2" style="text-align: center;">Actions</th>
 	    </tr>
 	  </thead>
 	  <tbody th:if="${viewTickets != null}">
