--- a/BugTracker/src/main/resources/templates/login.html
+++ b/BugTracker/src/main/resources/templates/login.html
@@ -20,7 +20,7 @@
                     <fieldset>
                         <!-- Thymeleaf + Spring Security error display -->
                         <div th:if="${loginFailed}" class="alert alert-danger">
-                            Invalid username and/or password.
+                            Invalid credentials.
                         </div>
 
                         <div th:if="${param.logout}" class="alert alert-success">
