--- a/BugTracker/src/main/resources/templates/ticket/ticket-details.html
+++ b/BugTracker/src/main/resources/templates/ticket/ticket-details.html
@@ -18,11 +18,12 @@
   <dt class="col-sm-3">Description</dt>
   <dd class="col-sm-9" th:text="${ticketDetails.description}"></dd>
   <dt class="col-sm-3" th:if="${ticketDetails.assignedUser != null && ticketDetails.assignedUser.userId == #authentication.principal.userId}">Assigned to You!</dt>
-  <dt class="col-sm-3" th:if="${!(ticketDetails.assignedUser != null && ticketDetails.assignedUser.userId == #authentication.principal.userId)}">Assigned to</dt>
+  <dt class="col-sm-3" th:if="${ticketDetails.assignedUser != null && ticketDetails.assignedUser.userId != #authentication.principal.userId}">Assigned to</dt>
+  <dt class="col-sm-3" th:if="${ticketDetails.assignedUser == null}">Open Ticket</dt>
   <dd class="col-sm-9" th:if="${ticketDetails.assignedUser != null && ticketDetails.assignedUser.userId != #authentication.principal.userId}" th:text="${ticketDetails.assignedUser?.firstName + ' ' + ticketDetails.assignedUser?.lastName}"></dd>
   <dd class="col-sm-9" th:if="${ticketDetails.assignedUser != null && ticketDetails.assignedUser.userId == #authentication.principal.userId}"><a th:href="@{/tickets/drop-ticket/{id}(id=${ticketDetails.ticketId})}" class="btn btn-danger">Drop Ticket</a></dd>
   <dd class="col-sm-9" sec:authorize="hasAnyAuthority('DEVELOPER, PROJECTMANAGER, ADMINISTRATOR')" th:if="${ticketDetails.assignedUser == null}"><a th:href="@{/tickets/take-ticket/{id}(id=${ticketDetails.ticketId})}" class="btn btn-success">Take ticket</a></dd>
-  <dt class="col-sm-9" th:if="${ticketDetails.assignedUser == null}">No one</dt>
+  <dt class="col-sm-9" sec:authorize="hasAnyAuthority('SUBMITTER')"th:if="${ticketDetails.assignedUser == null}">No one has taken this yet</dt>
   <dt class="col-sm-3">Submitter</dt>
   <dd class="col-sm-9" th:text="${ticketDetails.submitter?.firstName + ' ' + ticketDetails.submitter?.lastName}"></dd>
   <dt class="col-sm-3">Submission Date</dt>
